--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
     font-size: 16px; 
     line-height: 32px;
     font-family:Ubuntu,sans-serif;
-    color:#0b220b;
+    color:#1b4e1b;
 }
 
 h1 {
@@ -30,12 +30,12 @@ header, main, footer {
 
 header, footer, footer a {
     text-align: center;
-    background-color:#48455c;
+    background-color:#4c4b52;
     color: whitesmoke;
 }
 
 header img {
-    width: 190px;
+    width: 150px;
     height: auto;
     float: right;
 }
