--- a/css/estilospr2.css
+++ b/css/estilospr2.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    font-family: 'Courier New', monospace;
+    font-family: 'Courier New', courier;
     font-size:  18px;
     background: #b4b3aa;
 }
