--- a/ejemplomenu.css
+++ b/ejemplomenu.css
@@ -1,31 +1,64 @@
 body{
-    background-color: rgb(31, 36, 36);
+    margin:0;
+    font-family: sans-serif;
 }
-nav{
-    margin: 0 auto;
-    max-width: 760px;
-    background-color: black;
+header{
+    width: 100%;
+    background: rgb(53, 34, 34);
 }
-.menudx{
+#btn-menu{
+    display:none;
+}
+header label{
+    display:none;
+    width: 30px;
+    height: 30px;
+    padding: 10px;
+    border-right: 1px solid #fff;
+    
+}
+header label:hover{
+    cursor: pointer;
+    background: rgba(0, 0, 0,0.3);
+}
+.menu ul{
+    margin:0;
     list-style: none;
-    text-align: center;
     padding: 0;
+    display: flex;
+    flex-direction: row;
+ 
 }
-.menudx li:first-child{
+.menu li{
+    flex-grow: 1;
+}
+.menu li:hover{
+    background: rgba(0, 0, 0,0.3);
+}
+.menu li a{
     display: block;
-}
-.menudx li{
-    display: none;
-}
-.menudx a{
-    display: block;
-    color: aliceblue;
-    padding: 0.75rem;
-    text-align: center;
+    padding: 15px 20px;
+    color:#fff;
     text-decoration: none;
 }
-.menudx a:hover{
-    color: #292524;
-    background-color: #e4d2d0;
-    font-weight: 700;
-}
+@media(max-width:768px){
+    header label{
+        display: block;
+    }
+    .menu{
+        position: absolute;
+        background: rgb(117, 31, 31);
+        width: 70%;
+        margin-left: -70%;
+        transition: all 0.5s;
+        }
+        .menu ul{
+            flex-direction: column;
+        }
+        .menu li{
+            border-top: 1px solid #fff;
+        }
+        #btn-menu:checked ~ .menu{
+            margin:0;
+        }
+    }
