--- a/css/proyectofinals.css
+++ b/css/proyectofinals.css
@@ -10,28 +10,8 @@ body{
     background-position: center center;
     background-attachment: fixed;
 }
-.redes{
-    background: #292524;
-    width: 98%;
-    float: left;
-    font-size: 1em;
-    text-align: center;
-    padding: 10px;
-    border-radius: 22px;
-    border-style: double ;
-    border-color: rgb(14, 14, 15);
-}
-.csm{
-    text-align: center;
-    padding-top: 5px;
-    padding-bottom:5px;
-}
-.csm li{
-    display:inline-table;
-}
-.csm a{
-    padding:10px;
-}
+
+
 aside{
     color:#e4d2d0;
     
@@ -118,7 +98,7 @@ header{
     z-index: 1000;
     top: 0;
     width: 100%;
-    background: rgb(122, 98, 98);
+    background: linear-gradient(to right, #574c4c, rgb(90, 84, 74), rgb(156, 156, 35), rgb(96, 112, 96), rgb(81, 81, 95));
     border-radius: 15px;
 }
 #btn-menu{
@@ -167,7 +147,7 @@ header label:hover{
     }
     .menu{
         position: absolute;
-        background: rgb(117, 31, 31);
+        background: rgb(97, 79, 79);
         width: 70%;
         margin-left: -70%;
         transition: all 0.5s;
@@ -183,7 +163,28 @@ header label:hover{
         }
     }
 /* Footer */
-
+.csm{
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom:5px;
+}
+.csm li{
+    display:inline-table;
+}
+.csm a{
+    padding:10px;
+}
+.redes{
+    background: #292524;
+    width: 98%;
+    float: left;
+    font-size: 1em;
+    text-align: center;
+    padding: 10px;
+    border-radius: 22px;
+    border-style: double ;
+    border-color: rgb(14, 14, 15);
+}
   ul {
     list-style: none;
     padding-left: 0;
