--- a/css/proyectofinals.css
+++ b/css/proyectofinals.css
@@ -40,6 +40,9 @@ img.imgmenu{
     font-size: 1.2em;
     text-align: justify;
 }
+main h1{
+    text-align: center;
+}
 main{
     padding: 10px;
     background: #554a4d;
@@ -71,7 +74,8 @@ img.imagend{
     padding: 10px;
     width:80%;
     border-radius: 22px;
-    text-align: center;
+    display:block;
+    margin:auto;
 
 }
 video.videopu:hover{
@@ -101,8 +105,13 @@ header{
     background: linear-gradient(to right, #574c4c, rgb(90, 84, 74), rgb(156, 156, 35), rgb(96, 112, 96), rgb(81, 81, 95));
     border-radius: 15px;
 }
+img.menudxxd{
+    width: 30px;
+    height: 30px;
+}
 #btn-menu{
     display:none;
+    
 }
 header label{
     display:none;
